[gd_scene load_steps=4 format=3 uid="uid://dewtyhwhakl24"]

[ext_resource type="Texture2D" uid="uid://cwgksjawr8va2" path="res://assests/egg.png" id="1_4jje0"]
[ext_resource type="Script" path="res://scripts/Food.gd" id="1_hk3yj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8nxla"]
size = Vector2(135, 104)

[node name="Egg" type="Node2D"]
script = ExtResource("1_hk3yj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_4jje0")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_8nxla")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
